--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,6 +25,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
       # Step 5
+      - name: Inject Google credentials
+        uses: jsdaniell/create@1.1.2
+        with:
+          name: "credentials.json"
+          json: ${{ secrets.GC_CREDENTIALS_JSON }}
+          dir: "resources/"
+
       - name: Run bot test
         run: timeout --preserve-status 5 python bot.py ${{ secrets.BOT_SECRET_KEY }}
       
