--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,7 +26,7 @@ jobs:
           aws-region: us-east-2
       # Step 5
       - name: Inject Google credentials
-        uses: jsdaniell/create@1.1.2
+        uses: jsdaniell/create-json@1.1.2
         with:
           name: "credentials.json"
           json: ${{ secrets.GC_CREDENTIALS_JSON }}
