--- a/appspec.yml
+++ b/appspec.yml
@@ -4,16 +4,16 @@ files:
  - source: .
    destination: /home/ec2-user/app
 hooks:
-  # ApplicationStop:
-  #  - location: scripts/stop_bot.sh
-  #    timeout: 300
-  #    runas: root
+  ApplicationStop:
+   - location: scripts/stop_bot.sh
+     timeout: 60
+     runas: root
   AfterInstall:
    - location: scripts/install_bot_dependencies.sh
-     timeout: 300
+     timeout: 60
      runas: root
   ApplicationStart:
    - location: scripts/start_bot.sh
-     timeout: 300
+     timeout: 60
      runas: root
  
